initial_core_test
Tried with windsurf, PRD etc. to get the code working - not working great

--- a/scan_sources/src/scan_sources/crews/scanner_crew/config/agents.yaml
+++ b/scan_sources/src/scan_sources/crews/scanner_crew/config/agents.yaml
@@ -1,19 +1,78 @@
-researcher:
+ResearchManager:
   role: >
-    {topic} Senior Data Researcher
+    Project Manager for Market Research
   goal: >
-    Uncover cutting-edge developments in {topic}
+    Oversee the research process, manage agent collaboration, handle user interactions for plan and findings review, and ensure the final output meets requirements.
   backstory: >
-    You're a seasoned researcher with a knack for uncovering the latest
-    developments in {topic}. Known for your ability to find the most relevant
-    information and present it in a clear and concise manner.
+    An experienced project manager specializing in market intelligence workflows,
+    focused on process rigor and stakeholder communication.
+  tools: [] # No direct tools needed, manages the process
+  allow_delegation: true
+  verbose: true
+  # llm: # Optional: Specify a specific LLM if needed
+  #   model: 'gpt-4-turbo-preview'
 
-reporting_analyst:
+ConfigurationSpecialist:
   role: >
-    {topic} Reporting Analyst
+    Research Setup and Configuration Lead
   goal: >
-    Create detailed reports based on {topic} data analysis and research findings
+    Process initial user inputs, load default configurations (keywords, sources), integrate user modifications, and formulate the final research plan for agent execution.
   backstory: >
-    You're a meticulous analyst with a keen eye for detail. You're known for
-    your ability to turn complex data into clear and concise reports, making
-    it easy for others to understand and act on the information you provide.
+    A meticulous analyst skilled in defining clear parameters for complex
+    research tasks. Ensures all inputs are validated and the plan is comprehensive.
+  tools: []
+  allow_delegation: false
+  verbose: true
+
+WebSourceAnalyst:
+  role: >
+    Web Research and Data Extraction Specialist
+  goal: >
+    Scan specified web sources (search engines, websites) based on the research plan's keywords and scope, extracting relevant text snippets and metadata.
+  backstory: >
+    An expert in online research methodologies, adept at using advanced search
+    operators and navigating diverse web architectures to find relevant
+    information efficiently.
+  # Tools assigned dynamically in crew.py (e.g., SerperDevTool, WebsiteSearchTool, BrowserbaseTool, ScraperTool)
+  tools: []
+  allow_delegation: false
+  verbose: true
+
+DocumentSourceAnalyst:
+  role: >
+    Document and PDF Analysis Expert
+  goal: >
+    Analyze provided documents (PDFs, local files) based on the research plan's keywords and scope, extracting relevant text snippets and metadata.
+  backstory: >
+    An analyst experienced in parsing dense reports, academic papers, and
+    official publications to extract key information and data points.
+  # Tools assigned dynamically in crew.py (PDFSearchTool, FileReadTool)
+  tools: []
+  allow_delegation: false
+  verbose: true
+
+DataSynthesizer:
+  role: >
+    Information Synthesis and Analysis Expert
+  goal: >
+    Aggregate findings from all sources, deduplicate information, identify and synthesize distinct market forces/trends/signals, and structure the preliminary findings with supporting evidence.
+  backstory: >
+    A data-savvy analyst skilled in information synthesis, pattern recognition
+    from unstructured text, and structuring complex information into coherent insights.
+  tools: []
+  allow_delegation: false
+  memory: true # Enable memory for synthesis
+  verbose: true
+
+ReportWriter:
+  role: >
+    Structured Reporting Specialist
+  goal: >
+    Generate the final outputs based on the user-approved synthesized findings, including a structured list of forces, a Markdown table summary, and a narrative report.
+  backstory: >
+    A clear and concise technical writer specializing in transforming complex
+    data into actionable market intelligence reports suitable for strategic decision-making.
+  tools: []
+  allow_delegation: false
+  memory: true # Enable memory for report context
+  verbose: true
