--- a/scan_sources/pyproject.toml
+++ b/scan_sources/pyproject.toml
@@ -6,6 +6,7 @@ authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.13"
 dependencies = [
     "crewai[tools]>=0.100.1,<1.0.0",
+    "pydantic>=2.11.2",
 ]
 
 [project.scripts]
