--- a/Examples/Foresight_example/crews/plan_crew/config/agents.yaml
+++ b/Examples/Foresight_example/crews/plan_crew/config/agents.yaml
@@ -1,3 +1,5 @@
+# agents - plan_crew
+
 research_strategist:
   role: >
     Strategic Researcher with deep knowledge of {sector}, specialising in {report_type} development for {company} in {geography}
