--- a/Examples/Foresight_example/crews/plan_crew/config/tasks.yaml
+++ b/Examples/Foresight_example/crews/plan_crew/config/tasks.yaml
@@ -1,3 +1,5 @@
+# tasks - plan_crew
+
 research_strategy_task:
   description: >
     Conduct meta-research to define optimal methodologies and content requirements for a high-quality {report_type} on {topic} in the context of {sector}.
