--- a/Examples/Foresight_example/crews/research_crew/config/agents.yaml
+++ b/Examples/Foresight_example/crews/research_crew/config/agents.yaml
@@ -1,3 +1,5 @@
+# Agents - research_crew
+
 trend_researcher:
   role: >
     Senior Trend Researcher for {company} specialising in {topic} for {sector} in {geography}
