--- a/Examples/Foresight_example/crews/research_crew/config/tasks.yaml
+++ b/Examples/Foresight_example/crews/research_crew/config/tasks.yaml
@@ -1,3 +1,5 @@
+# tasks - research_crew
+
 trend_research_task:
   description: >
     Conduct thorough research to identify and document potential trends and forces affecting {sector} in {geography} according to the provided section from the content plan for {report_type}.
